--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@
 #	requirements.txt in the root directory of a project.
 pylibmc==1.5.0
 django-heroku-memcacheify==0.8
+djangorestframework==3.1.3
 -r requirements/production.txt
